--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     testImplementation 'junit:junit:4.13'
@@ -51,4 +51,14 @@ dependencies {
 
     implementation "org.koin:koin-android:2.0.1"
     implementation "org.koin:koin-android-viewmodel:2.0.1"
+
+    // Koin for Android
+    implementation 'org.koin:koin-android:2.0.1'
+    // or Koin for Android Architecture ViewModel
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+    implementation connectionDependencies
+
+    implementation 'androidx.recyclerview:recyclerview:1.0.0' //Update to latest version
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
